# object_detection_basic

./: .dockeringore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.html  main.py  model_service.py  pyproject.toml
grafana/provisioning/dashboard/: dashboard.yml
prometheus/: prometheus.yml
